static/style.css
.top-banner {
    width:90%;
    text-align: center;
}
.top-iconleft {
    height:28px;
    float: left;
    padding: 16px 0;
}
.logo {
    display: inline-block;
    height: 40px;
    margin: 0 auto;
    padding: 10px;
}
.top-iconright {
    height:28px;
    float: right;
    padding: 16px 0;
}
/* Design of a card */
.card {
  /*font-size: 14px;*/
  /*line-height: 200px;*/
  /*text-align:center;*/
  display: block;
  -webkit-transform-origin: 50% 99%;
  transform-origin: 50% 99%;
}
.cardcontainer {
  padding: 0;
  text-align: left;
  width: 90%;
  margin: auto;
}

li span {
    display: block;
}
.s_name {
    font-size: 20px;
}
.s_description {
    margin-top: 10px;
}

/* List functionality */
.list .cardlist {
  margin: 0;
  padding: 0;
  width: 100%;
  height: 60%;
}
.tinderesque .list .card {
  display: none;
}
.tinderesque .list .current {
  display: block;
}

.current {
    border: 1px solid #888;
    width: 100%;
}

/* Button designs */

.but-nope, .but-yay, .nopes, .yays {
  display: none;
}

.tinderesque .but-nope, .tinderesque .but-yay,
.tinderesque .nopes, .tinderesque .yays {
  display: inline-block;
}

.cardcontainer button {
  background-image: url("http://media.148apps.com/screenshots/547702041/us-iphone-1-tinder.jpeg");
  background-repeat: no-repeat;
  border: 10px solid #efefef;
  color: #fff;
  border-radius: 50% 50%;
  width: 100px;
  height: 100px;
  line-height: 30px;
  margin: 0 .5em;
  display: inline-block;
}
.cardcontainer button:focus {
  outline: 0;
}
.cardcontainer .but-nope {
    background-position: -222px -1018px;
    position: absolute;
    bottom: 15px;
    left: 60px;
}
.cardcontainer .but-nope:focus {
  outline: 0;
}

.cardcontainer .but-yay {
    background-position: -338px -1020px;
    position: absolute;
    bottom: 15px;
    right: 60px;
}

.tinderesque .cardcontainer.yes .card {
  -webkit-animation: yay 0.7s ease-out;
  animation: yay 0.7s ease-out;
}
.tinderesque .cardcontainer.nope .card {
  -webkit-animation: nope 0.7s ease-out;
  animation: nope 0.7s ease-out;
}


/*
  Animations, isn't it 'fun' to repeat all of that, just for Safari? :)
*/

@keyframes yay {
  from {
    transform: rotate(0deg);
    opacity: 1;
  }
  to {
    transform: rotate(40deg) translateY(-80px);
    opacity: 0;
  }
}

@-webkit-keyframes yay {
  from {
    -webkit-transform: rotate(0deg);
    opacity: 1;
  }
  to {
    -webkit-transform: rotate(40deg) translateY(-80px);
    opacity: 0;
  }
}

@keyframes nope {
  from {
    transform: rotate(0deg);
    opacity: 1;
  }
  to {
    transform: rotate(-40deg) translateY(-80px);
    opacity: 0;
  }
}

@-webkit-keyframes nope {
  from {
    -webkit-transform: rotate(0deg);
    opacity: 1;
  }
  to {
    -webkit-transform: rotate(-40deg) translateY(-80px);
    opacity: 0;
  }
}
body {
  position: relative;
  max-width: 360px;
  max-height: 560px;
  width:100%;
  height:100%;
  overflow: hidden;
  font-family: helvetica, arial, sans-serif;
  /*background: #333;
  background: linear-gradient(#333,#666);*/
  background: #404040;
  color: #666;
  font-size: 16px;
  padding: 0;
  margin: auto;
}
header, section, footer {
  display: block;
  padding: 0.5em 1em;
}
header, footer {
  background: #000;
  background: linear-gradient(#111,#000);
}
a {color: lime;}
h1, h2 {
  color: #f8f8f8;
  font-size: 24px;
  font-weight: normal;
}
h2 {font-size: 20px;}
.floaty .cardcontainer {
  float: left;
}
h2 {clear: both;}
footer, header, section {
  display: block;
}
footer {
  font-size: 10px;
  text-align: right;
  padding: 3em 0.5em 1em 0.5em;
}
.nobutton:hover .yes {
  -webkit-animation: yay 0.7s ease-out;
  animation: yay 0.7s ease-out;
}
.nobutton:hover .nope {
  -webkit-animation: nope 0.7s ease-out;
  animation: nope 0.7s ease-out;
}
.card {
  /*background: powderblue;*/
  width: 100%;
  height: 100%;
  overflow: hidden;
}
.image_container {
    width: 100%;
    height: 75%;
    background-size: cover;
    background-position: center center;
}
.content_container {
    height: 25%;
    padding: 10px;
    overflow-y: auto;
}
.list ul.cardlist {
  padding-bottom: 10px;
}

